welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: not found: value Y
  setPos(getX-1,Y+2)
                ^